Se enlazaron galerias con otras secciones

--- a/galeria2.html
+++ b/galeria2.html
@@ -18,21 +18,21 @@
 <body>
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <!-- <a class="navbar-brand" href="#">-->
+             <a class="navbar-brand" href="index.html">
             <img id="logoInicio" src="Fondos/Logotipo.png" alt="" width="110" height="110">
-            <!-- </a>-->
+             </a>
         </div>
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="portafolio.html">
                 <p class="cabezote">Portafolio</p>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="galeria.html">
                 <p class="cabezoteDos">Galería</p>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="nosotros.html">
                 <p class="cabezote">Nosotros</p>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="contacto.html">
                 <p class="cabezote">Contacto</p>
             </a>
         </div>
@@ -90,9 +90,9 @@
         </div>
     </div>
     <div id="paginasGaleria">
-        <a class="btn btn-dark" href="#" role="button">1</a>
-        <a class="btn btn-dark" href="#" role="button">2</a>
-        <a class="btn btn-dark" href="#" role="button">3</a>
+        <a class="btn btn-dark" href="galeria.html" role="button">1</a>
+        <a class="btn btn-secondary" href="#" role="button">2</a>
+        <a class="btn btn-dark" href="galeria3.html" role="button">3</a>
     </div>
 
     <footer class="bg-dark text-center text-white">
