--- a/galeria3.html
+++ b/galeria3.html
@@ -18,21 +18,20 @@
 <body>
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <!-- <a class="navbar-brand" href="#">-->
+            <a class="navbar-brand" href="index.html">
             <img id="logoInicio" src="Fondos/Logotipo.png" alt="" width="110" height="110">
-            <!-- </a>-->
         </div>
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="portafolio.html">
                 <p class="cabezote">Portafolio</p>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="galeria.html">
                 <p class="cabezoteDos">Galería</p>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="nosotros.html">
                 <p class="cabezote">Nosotros</p>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="contacto.html">
                 <p class="cabezote">Contacto</p>
             </a>
         </div>
@@ -76,9 +75,9 @@
 
     </div>
     <div id="paginasGaleria">
-        <a class="btn btn-dark" href="#" role="button">1</a>
-        <a class="btn btn-dark" href="#" role="button">2</a>
-        <a class="btn btn-dark" href="#" role="button">3</a>
+        <a class="btn btn-dark" href="galeria.html" role="button">1</a>
+        <a class="btn btn-dark" href="galeria2.html" role="button">2</a>
+        <a class="btn btn-secondary" href="#" role="button">3</a>
     </div>
 
     <footer class="bg-dark text-center text-white">
