Se enlazó archivo con demás secciones

--- a/nosotros.html
+++ b/nosotros.html
@@ -18,21 +18,20 @@
 <body>
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <!-- <a class="navbar-brand" href="#">-->
+            <a class="navbar-brand" href="index.html">
             <img id="logoInicio" src="Fondos/Logotipo.png" alt="" width="110" height="110">
-            <!-- </a>-->
         </div>
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="portafolio.html">
                 <p class="cabezote">Portafolio</p>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="galeria.html">
                 <p class="cabezote">Galería</p>
             </a>
             <a class="navbar-brand" href="#">
                 <p class="cabezoteTres">Nosotros</p>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="contacto.html">
                 <p class="cabezote">Contacto</p>
             </a>
         </div>
