--- a/contacto.html
+++ b/contacto.html
@@ -18,18 +18,18 @@
 <body>
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <!-- <a class="navbar-brand" href="#">-->
+            <a class="navbar-brand" href="index.html">
             <img id="logoInicio" src="Fondos/Logotipo.png" alt="" width="110" height="110">
-            <!-- </a>-->
+            
         </div>
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="portafolio.css">
                 <p class="cabezote">Portafolio</p>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="galeria.html">
                 <p class="cabezote">Galería</p>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="nosotros.html">
                 <p class="cabezote">Nosotros</p>
             </a>
             <a class="navbar-brand" href="#">
