Se enlazó con demás secciones

--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,7 @@
             
         </div>
         <div class="container-fluid">
-            <a class="navbar-brand" href="portafolio.css">
+            <a class="navbar-brand" href="portafolio.html">
                 <p class="cabezote">Portafolio</p>
             </a>
             <a class="navbar-brand" href="galeria.html">
